# python-project-template

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: __init__.py  example.py
tests/: __init__.py  test_example.py
